# opp_NSU_Labs

./: .gitignore  README.md
lab1/: executable  main.c  settings.h
lab1/default/: main.c
lab1/default/matrix/: matrix.c
lab1/default/parser/: parser.h
lab1/default/vector/: vector.c
lab1/matrix/: matrix.c  matrix.h
lab1/parser/: parser.c
lab1/shift_table/: shift_table.c  shift_table.h
lab1/vector/: vector.c  vector.h  vectror.h
lab2/: executable  lab2_graphics.ods  main.c  settings.h  test_schedule.c  test_time.c  Отчёт_Лаб2_Новиков_22208.doc
lab2/matrix/: matrix.c  matrix.h
lab2/parser/: parser.c
lab2/vector/: vector.c  vector.h
lab3/: A  B  data.ods  main.c  Отчёт_Лаб3_Новиков_22208.doc
lab3/matrix/: matrix.c  matrix.h
lab3/parser/: parser.c  parser.h
lab4/: CMakeLists.txt  main.c
lab4/function/: function.c  function.h
lab4/include/: buffer.h  configuration.h  function.h  node_function.h  utils.h
lab4/parser/: parser.c  parser.h
lab4/src/: buffer.c  jacobi_algo.c  utils.c
lab4/src/function/: function.c  node_function.c
lab5/src/: main.cpp
